alignment issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,11 @@
 /*images inside the thumbnails will have this style*/
+
+.thumbnail{
+
+  height:300px;
+}
+
+
 .thumbnail img{
   width: 150px;
   height: 150px;
@@ -10,4 +17,10 @@
   padding-top: 10px;
   padding-bottom: 5px;
   padding-right: 5px;
+}
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 970px;
+    }
 }
